(fix): Add margin to product content on mobile product page

--- a/src/components/ProductsPage/product-card.scss
+++ b/src/components/ProductsPage/product-card.scss
@@ -19,6 +19,11 @@
   &__content {
     margin-top: 10px;
     margin-bottom: 5px;
+    padding-left: 12px;
+
+    @include b.for-size(medium) {
+      padding-left: 0px;
+    }
   }
 
   &__title {
